syntax = "proto3";

package IdentityApi;

service Users {
	rpc GetUsers(UsersRequest) returns (PaginatedItemsResponse) {}
}

message UsersRequest {
	int32 pageIndex = 1;
	int32 pageSize = 2;
}

message PaginatedItemsResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated UsersResponse data = 4;
}

message UsersResponse {
	string id = 1;
	string userName = 2;
}